--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -43,6 +43,7 @@ exec-once = swaync
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = SSH_AUTH_SOCK, $XDG_RUNDTIME_DIR/ssh-agent.socket
 
 ###################
 ### PERMISSIONS ###
