--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -12,4 +12,4 @@ window-padding-y = 0
 window-save-state = always
 macos-titlebar-style = transparent
 confirm-close-surface = false
-
+shell-integration-features = ssh-terminfo, ssh-env
