add hyprpaper to hyprland.conf, fix waybar icons

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -23,8 +23,8 @@ $path_hyprshot = $HOME/Documents/screenshots
 # exec-once = $terminal
 # exec-once = nm-applet &
 
-# Locking and Idling
-exec-once = hyprlock & hypridle
+# Locking, idling, wallpaper
+exec-once = hyprlock & hypridle & hyprpaper
 
 # Top status bar
 exec-once = waybar
