--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,39 +1,85 @@
 {
-  "position": "top",
-  "modules-left": ["hyprland/workspaces"],
-  "modules-right": ["network", "pulseaudio", "battery", "clock"],
-  "clock": {
-    "format": "<span foreground='#f5c2e7'>   </span>{:%a %d %H:%M}",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-  },
-  "battery": {
-    "states": {
-      "warning": 30,
-      "critical": 15
+    /*==== GLOBAL FORMATTING */
+    "position": "top",
+    "layer": "top",
+    /* ==== MODULES ORDER ==== */
+    "modules-left": [
+	"clock",
+	"cpu",
+	"memory",
+	"disk"
+    ],
+    "modules-center": [
+	"hyprland/workspaces"
+    ],
+    "modules-right": [
+	"wlr/taskbar",
+	"pulseaudio", 
+	"network"
+    ],
+    /* ==== MODULES LEFT ==== */
+    "clock": {
+	"timezone": "U.S./Eastern",
+	"format": "{:%I:%M %d, %m}",
+	"tooltip-format": "{calendar}",
+	"calendar": {
+	    "mode": "month"
+	}
     },
-    "format": "<span size='13000' foreground='#a6e3a1'>{icon} </span> {capacity}%",
-    "format-warning": "<span size='13000' foreground='#B1E3AD'>{icon} </span> {capacity}%",
-    "format-critical": "<span size='13000' foreground='#E38C8F'>{icon} </span> {capacity}%",
-    "format-charging": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-plugged": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-alt": "<span size='13000' foreground='#B1E3AD'>{icon} </span> {time}",
-    "format-full": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-icons": ["", "", "", "", ""],
-    "tooltip-format": "{time}"
-  },
-  "network": {
-    "format-wifi": "<span size='13000' foreground='#f5e0dc'>  </span>{essid}",
-    "format-ethernet": "<span size='13000' foreground='#f5e0dc'>󰤭  </span> Disconnected",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "<span size='13000' foreground='#f5e0dc'>  </span>Disconnected",
-    "tooltip-format-wifi": "Signal Strenght: {signalStrength}%"
-  },
-  "pulseaudio": {
-      "format": "{icon}  {volume}%",
-      "format-muted": "",
-      "format-icons": {
-          "default": ["", "", " "]
-      },
-      "on-click": "pavucontrol"
-  }
+    "cpu": {
+	"format": "{usage}% ",
+	"tooltip": true,
+	"tooltip-format": "CPU usage: {usage}%\nNum cores: {cores}"
+    },
+    "memory": {
+	"format": "{}% 󰍛",
+	"tooltip": true,
+	"tooltip-format": "RAM usage: {used} / {total} ({percentage}%)"
+    },
+    "disk": {
+	"format": "{percentage_free}% ",
+	"tooltip": true,
+	"tooltip-format": "Disk usage: {free} / {total} ({percentage_free}%)"
+    },
+    /* ==== MODULES CENTER ==== */
+    "hyprland/workspaces": {
+	"format": "{icon}",
+	"format-icons": {
+	    "default": "",
+	    "active": ""
+	},
+	"persistent-workspaces": {
+	    "*": 2
+	},
+	"disable-scroll": true,
+	"all-outputs": true,
+	"show-special": true
+    },
+    /* ==== MODULES RIGHT ==== */
+    "wlr/taskbar": {
+	"format": "{icon}",
+	"all-outputs": true,
+	"active-first": true,
+	"tooltip-format": "{name}",
+	"on-click": "activate",
+	"on-click-middle": "close",
+	"ignore-list": [
+	    "rofi"
+	]
+    },
+    "pulseaudio": {
+	"format": "{volume}% {icon}",
+	"format-muted": "  {format_source}",
+	"format-icons": {
+	    "default": ["", "", " "]
+	}
+    },
+    "network": {
+	"format": "{ifname}",
+	"format-wifi": "{ifname}  ",
+	"format-ethernet": "{ifname} 󰈀",
+	"format-linked": "{ifname} (No IP) ",
+	"format-disconnected": " ",
+	"format-icons": ["󰤟", "󰤢", "󰤥"]
+    }
 }
