update hypridle config

--- a/hypridle/.config/hypr/hypridle.conf
+++ b/hypridle/.config/hypr/hypridle.conf
@@ -13,41 +13,30 @@ general {
     inhibit_sleep = 3
 }
 
-# -------------------------------------------------------------------
-# Dim monitor backlight after 2.5 minutes
+# Dim monitor backlight after 5 mins
 listener {
-    timeout = 150                                # 2.5 min
+    timeout = 300
     on-timeout = brightnessctl -s set 10
     on-resume = brightnessctl -r
 }
 
-# -------------------------------------------------------------------
-# Turn off keyboard backlight after 2.5 minutes
-# Comment out if your keyboard has no backlight
+# Turn off keyboard backlight after 5 minutes
 listener {
-    timeout = 150                                # 2.5 min
+    timeout = 300 
     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0
     on-resume = brightnessctl -rd rgb:kbd_backlight
 }
 
-# -------------------------------------------------------------------
 # Lock screen after 5 minutes
 listener {
     timeout = 300 
     on-timeout = loginctl lock-session
 }
 
-# -------------------------------------------------------------------
-# Turn off displays after 5.5 minutes
+# Turn off displays after 5 minutes
 listener {
-    timeout = 330                                # 5.5 min
+    timeout = 300
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on && brightnessctl -r
 }
 
-# -------------------------------------------------------------------
-# Suspend system after 30 minutes
-listener {
-    timeout = 1800                               # 30 min
-    on-timeout = systemctl suspend
-}
